--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
+  - {name: 🇺🇸 美国-2.94MB/s(Youtube:不良林), server: 38.68.135.18, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
+  - {name: 🇳🇱 荷兰-2.01MB/s(Youtube:不良林), server: 213.183.59.190, port: 9011, type: ss, cipher: aes-256-cfb, password: M3t2ZEQcMGRWBjRa}
+  - {name: 🇺🇸 美国-2.57MB/s(Youtube:不良林), server: 38.121.43.71, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇷🇺 俄罗斯联邦-2.01MB/s(Youtube:不良林), server: 213.183.53.214, port: 9024, type: ss, cipher: aes-256-cfb, password: BejrQvtu9sqUeNuZ}
   - {name: 🇳🇱 荷兰-2.40MB/s(Youtube:不良林), server: 213.183.59.190, port: 9059, type: ss, cipher: aes-256-cfb, password: 9XwYyZsK8SNzQDtY}
-  - {name: 🇨🇳 中国-4.14MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-390.0KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32003, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇳🇱 荷兰-1.87MB/s(Youtube:不良林), server: 213.183.59.206, port: 9032, type: ss, cipher: aes-256-cfb, password: UWZQeLRWnkqgkseq}
-  - {name: 🇺🇸 美国-3.35MB/s(Youtube:不良林), server: 38.75.136.102, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
   - {name: 🇷🇺 俄罗斯联邦-472.4KB/s(Youtube:不良林), server: 213.183.53.208, port: 9045, type: ss, cipher: aes-256-cfb, password: Lp27rqyJq72bZsqX}
   - {name: 🇷🇺 俄罗斯联邦-303.6KB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
   - {name: 🇺🇸 美国-2.48MB/s(Youtube:不良林), server: 38.121.43.71, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.57MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.01MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-2.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-390.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-472.4KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-303.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
+      - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.57MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.01MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-2.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-390.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-472.4KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-303.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.57MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.01MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-2.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-390.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-472.4KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-303.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
+      - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.57MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.01MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-2.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-390.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-472.4KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-303.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
+      - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.57MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.01MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-2.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-390.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-472.4KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-303.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.57MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.01MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-2.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-390.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-472.4KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-303.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.57MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.01MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-2.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-390.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-472.4KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-303.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
