--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-2.94MB/s(Youtube:不良林), server: 38.68.135.18, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
-  - {name: 🇳🇱 荷兰-2.01MB/s(Youtube:不良林), server: 213.183.59.190, port: 9011, type: ss, cipher: aes-256-cfb, password: M3t2ZEQcMGRWBjRa}
-  - {name: 🇺🇸 美国-2.57MB/s(Youtube:不良林), server: 38.121.43.71, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇷🇺 俄罗斯联邦-2.01MB/s(Youtube:不良林), server: 213.183.53.214, port: 9024, type: ss, cipher: aes-256-cfb, password: BejrQvtu9sqUeNuZ}
-  - {name: 🇳🇱 荷兰-2.40MB/s(Youtube:不良林), server: 213.183.59.190, port: 9059, type: ss, cipher: aes-256-cfb, password: 9XwYyZsK8SNzQDtY}
-  - {name: 🇷🇺 俄罗斯联邦-472.4KB/s(Youtube:不良林), server: 213.183.53.208, port: 9045, type: ss, cipher: aes-256-cfb, password: Lp27rqyJq72bZsqX}
-  - {name: 🇷🇺 俄罗斯联邦-303.6KB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
-  - {name: 🇺🇸 美国-2.48MB/s(Youtube:不良林), server: 38.121.43.71, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇺🇸 美国-2.09MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.63MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.05MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-2.07MB/s(Youtube:不良林), server: 38.121.43.71, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇳🇱 荷兰-189.5KB/s(Youtube:不良林), server: 213.183.59.185, port: 9042, type: ss, cipher: aes-256-cfb, password: S7KwUu7yBy58S3Ga}
+  - {name: 🇷🇺 俄罗斯联邦-449.2KB/s(Youtube:不良林), server: 213.183.53.214, port: 9020, type: ss, cipher: aes-256-cfb, password: BNmAXXxAHYpTRdzu}
+  - {name: 🇳🇱 荷兰-175.3KB/s(Youtube:不良林), server: 213.183.59.185, port: 9070, type: ss, cipher: aes-256-cfb, password: bf7v334KKDV3YDhH}
+  - {name: 🇳🇱 荷兰-1.66MB/s(Youtube:不良林), server: 213.183.59.190, port: 9045, type: ss, cipher: aes-256-cfb, password: Lp27rqyJq72bZsqX}
+  - {name: 🇷🇺 俄罗斯联邦-969.2KB/s(Youtube:不良林), server: 213.183.53.214, port: 9032, type: ss, cipher: aes-256-cfb, password: UWZQeLRWnkqgkseq}
+  - {name: 🇳🇱 荷兰-323.7KB/s(Youtube:不良林), server: 213.183.59.229, port: 9025, type: ss, cipher: aes-256-cfb, password: XPtzA9sCug3SPR4c}
+  - {name: 🇳🇱 荷兰-1.93MB/s(Youtube:不良林), server: 213.183.59.206, port: 9031, type: ss, cipher: aes-256-cfb, password: BwcAUZk8hUFAkDGN}
+  - {name: 🇷🇺 俄罗斯联邦-1.18MB/s(Youtube:不良林), server: 213.183.53.207, port: 9056, type: ss, cipher: aes-256-cfb, password: rNBfNuuANFCAk7KB}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.57MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.01MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.40MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-472.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-303.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-189.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-449.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-175.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.66MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-969.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-323.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.93MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.18MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.57MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.01MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.40MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-472.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-303.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-189.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-449.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-175.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.66MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-969.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-323.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.93MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.18MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.57MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.01MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.40MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-472.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-303.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-189.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-449.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-175.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.66MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-969.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-323.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.93MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.18MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.57MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.01MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.40MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-472.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-303.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-189.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-449.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-175.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.66MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-969.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-323.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.93MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.18MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.57MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.01MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.40MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-472.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-303.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-189.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-449.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-175.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.66MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-969.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-323.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.93MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.18MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.57MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.01MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.40MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-472.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-303.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-189.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-449.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-175.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.66MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-969.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-323.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.93MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.18MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.57MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.01MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.40MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-472.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-303.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-189.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-449.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-175.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.66MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-969.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-323.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.93MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.18MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
