--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
+  - {name: 🇫🇷 法国-1.54MB/s(Youtube:不良林), server: 54.36.174.181, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇺🇸 美国-2.36MB/s(Youtube:不良林), server: 38.68.135.18, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇳🇱 荷兰-200.5KB/s(Youtube:不良林), server: 213.183.59.185, port: 9057, type: ss, cipher: aes-256-cfb, password: wjTugX3ZtHMB9c3Z}
   - {name: 🇨🇦 加拿大-1.05MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-2.07MB/s(Youtube:不良林), server: 38.121.43.71, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇳🇱 荷兰-189.5KB/s(Youtube:不良林), server: 213.183.59.185, port: 9042, type: ss, cipher: aes-256-cfb, password: S7KwUu7yBy58S3Ga}
-  - {name: 🇷🇺 俄罗斯联邦-449.2KB/s(Youtube:不良林), server: 213.183.53.214, port: 9020, type: ss, cipher: aes-256-cfb, password: BNmAXXxAHYpTRdzu}
-  - {name: 🇳🇱 荷兰-175.3KB/s(Youtube:不良林), server: 213.183.59.185, port: 9070, type: ss, cipher: aes-256-cfb, password: bf7v334KKDV3YDhH}
-  - {name: 🇳🇱 荷兰-1.66MB/s(Youtube:不良林), server: 213.183.59.190, port: 9045, type: ss, cipher: aes-256-cfb, password: Lp27rqyJq72bZsqX}
-  - {name: 🇷🇺 俄罗斯联邦-969.2KB/s(Youtube:不良林), server: 213.183.53.214, port: 9032, type: ss, cipher: aes-256-cfb, password: UWZQeLRWnkqgkseq}
-  - {name: 🇳🇱 荷兰-323.7KB/s(Youtube:不良林), server: 213.183.59.229, port: 9025, type: ss, cipher: aes-256-cfb, password: XPtzA9sCug3SPR4c}
-  - {name: 🇳🇱 荷兰-1.93MB/s(Youtube:不良林), server: 213.183.59.206, port: 9031, type: ss, cipher: aes-256-cfb, password: BwcAUZk8hUFAkDGN}
-  - {name: 🇷🇺 俄罗斯联邦-1.18MB/s(Youtube:不良林), server: 213.183.53.207, port: 9056, type: ss, cipher: aes-256-cfb, password: rNBfNuuANFCAk7KB}
+  - {name: 🇺🇸 美国-1.46MB/s(Youtube:不良林), server: 38.75.136.102, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇷🇺 俄罗斯联邦-385.2KB/s(Youtube:不良林), server: 213.183.53.214, port: 9061, type: ss, cipher: aes-256-cfb, password: 4R3hUfZ2FHhDmNcP}
+  - {name: 🇳🇱 荷兰-1.26MB/s(Youtube:不良林), server: 213.183.59.211, port: 9010, type: ss, cipher: aes-256-cfb, password: f63gg8EruDnUrmz4}
+  - {name: 🇳🇱 荷兰-2.73MB/s(Youtube:不良林), server: 213.183.59.211, port: 9079, type: ss, cipher: aes-256-cfb, password: TPqX8edgbAURcAMb}
+  - {name: 🇷🇺 俄罗斯联邦-3.14MB/s(Youtube:不良林), server: 213.183.53.177, port: 9060, type: ss, cipher: aes-256-cfb, password: ueLXVkvh4hckhErQ}
+  - {name: 🇷🇺 俄罗斯联邦-322.2KB/s(Youtube:不良林), server: 213.183.53.200, port: 9046, type: ss, cipher: aes-256-cfb, password: NvS8N4Vf8qAGPSCL}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇫🇷 法国-1.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.36MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-200.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-189.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-449.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-175.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.66MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-969.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-323.7KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.93MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-385.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.26MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.73MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.14MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-322.2KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
+      - 🇫🇷 法国-1.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.36MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-200.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-189.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-449.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-175.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.66MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-969.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-323.7KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.93MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-385.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.26MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.73MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.14MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-322.2KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇫🇷 法国-1.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.36MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-200.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-189.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-449.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-175.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.66MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-969.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-323.7KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.93MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-385.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.26MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.73MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.14MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-322.2KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
+      - 🇫🇷 法国-1.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.36MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-200.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-189.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-449.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-175.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.66MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-969.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-323.7KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.93MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-385.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.26MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.73MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.14MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-322.2KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
+      - 🇫🇷 法国-1.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.36MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-200.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-189.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-449.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-175.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.66MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-969.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-323.7KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.93MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-385.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.26MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.73MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.14MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-322.2KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇫🇷 法国-1.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.36MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-200.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-189.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-449.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-175.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.66MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-969.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-323.7KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.93MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-385.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.26MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.73MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.14MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-322.2KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇫🇷 法国-1.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.36MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-200.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-189.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-449.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-175.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.66MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-969.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-323.7KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.93MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-385.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.26MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.73MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.14MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-322.2KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
