--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇫🇷 法国-1.54MB/s(Youtube:不良林), server: 54.36.174.181, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇺🇸 美国-2.36MB/s(Youtube:不良林), server: 38.68.135.18, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇳🇱 荷兰-200.5KB/s(Youtube:不良林), server: 213.183.59.185, port: 9057, type: ss, cipher: aes-256-cfb, password: wjTugX3ZtHMB9c3Z}
-  - {name: 🇨🇦 加拿大-1.05MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-1.46MB/s(Youtube:不良林), server: 38.75.136.102, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇷🇺 俄罗斯联邦-472.4KB/s(Youtube:不良林), server: 213.183.53.208, port: 9045, type: ss, cipher: aes-256-cfb, password: Lp27rqyJq72bZsqX}
+  - {name: 🇳🇱 荷兰-589.8KB/s(Youtube:不良林), server: 213.183.59.190, port: 9059, type: ss, cipher: aes-256-cfb, password: 9XwYyZsK8SNzQDtY}
+  - {name: 波兰-630.6KB/s(Youtube:不良林), server: 217.30.10.66, port: 9003, type: ss, cipher: aes-256-cfb, password: JdmRK9gMEqFgs8nP}
+  - {name: 🇺🇸 美国-1.34MB/s(Youtube:不良林), server: 38.121.43.71, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇳 中国-531.9KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇷🇺 俄罗斯联邦-385.2KB/s(Youtube:不良林), server: 213.183.53.214, port: 9061, type: ss, cipher: aes-256-cfb, password: 4R3hUfZ2FHhDmNcP}
   - {name: 🇳🇱 荷兰-1.26MB/s(Youtube:不良林), server: 213.183.59.211, port: 9010, type: ss, cipher: aes-256-cfb, password: f63gg8EruDnUrmz4}
   - {name: 🇳🇱 荷兰-2.73MB/s(Youtube:不良林), server: 213.183.59.211, port: 9079, type: ss, cipher: aes-256-cfb, password: TPqX8edgbAURcAMb}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-1.54MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.36MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-200.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-472.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-589.8KB/s(Youtube:不良林)
+      - 波兰-630.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-531.9KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-385.2KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.26MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-2.73MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇫🇷 法国-1.54MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.36MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-200.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-472.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-589.8KB/s(Youtube:不良林)
+      - 波兰-630.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-531.9KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-385.2KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.26MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-2.73MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-1.54MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.36MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-200.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-472.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-589.8KB/s(Youtube:不良林)
+      - 波兰-630.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-531.9KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-385.2KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.26MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-2.73MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇫🇷 法国-1.54MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.36MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-200.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-472.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-589.8KB/s(Youtube:不良林)
+      - 波兰-630.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-531.9KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-385.2KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.26MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-2.73MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇫🇷 法国-1.54MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.36MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-200.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-472.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-589.8KB/s(Youtube:不良林)
+      - 波兰-630.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-531.9KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-385.2KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.26MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-2.73MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-1.54MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.36MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-200.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-472.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-589.8KB/s(Youtube:不良林)
+      - 波兰-630.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-531.9KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-385.2KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.26MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-2.73MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-1.54MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.36MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-200.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-472.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-589.8KB/s(Youtube:不良林)
+      - 波兰-630.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-531.9KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-385.2KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.26MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-2.73MB/s(Youtube:不良林)
